--- a/frontend/public/locales/locale-hu.json
+++ b/frontend/public/locales/locale-hu.json
@@ -21,8 +21,8 @@
     "errors": {
       "password": "A jelszó legalább 8 karakter hosszú kell legyen",
       "username": "A felhasználónév kötelező",
-      "email": "Ez nem egy helyes email",
       "name": "A név kötelező",
+      "email": "Ez nem egy helyes email",
       "confPassword": "A jelszavaknak egyezniük kell"
     },
     "fields": {
@@ -73,11 +73,22 @@
       "logout": "Kijelentkezés"
     }
   },
+  "notFound": {
+    "tabTile": "Nem található",
+    "title": "Talán el vagy veszlődve",
+    "desc": "Az oldal amit el akarsz érni nem létezik"
+  },
+  "user": {
+    "about": "Rólam",
+    "articles": "Cikkek",
+    "noArticles": "Nem található cikk",
+    "othersAlert": "Így látja a többi felhasználó az oldalad"
+  },
   "story": {
     "written": "Írta",
     "like": {
       "noLogin": "Be kell légy jelentkezve",
-      "unavailable": "Ez a blog még elérhetetlen"
+      "unavailable": "Ez a blog még nem elérhető"
     },
     "comments": {
       "title": "Hozzászólások",
@@ -87,27 +98,27 @@
         "base": "Mutassd a maradék {{count}} hozzászólást"
       },
       "delete": {
-        "desc": "Ez a művelet visszafordíthatatlan. Ez véglegesen törölni fogja ezt a hozzászólást.",
-        "title": "Biztos vagy benne?"
+        "title": "Biztos vagy benne?",
+        "desc": "Ez a művelet visszafordíthatatlan. Ez véglegesen törölni fogja ezt a hozzászólást."
       },
       "edit": {
         "title": "Hozzászólás szerkesztése"
       },
       "toasts": {
+        "post": {
+          "loading": "Hozzászólás posztolása...",
+          "success": "Hozzászólás sikeresen posztolva",
+          "error": "Hiba történt a hozzászólás posztolásakor"
+        },
         "delete": {
-          "error": "Hiba történt a hozzászólás törlése közben",
           "loading": "Hozzászólás törlése...",
-          "success": "Hozzászólás sikeresen törölve"
+          "success": "Hozzászólás sikeresen törölve",
+          "error": "Hiba történt a hozzászólás törlése közben"
         },
         "edit": {
-          "error": "Hiba történt a hozzászólás törlése közben",
           "loading": "Szerkesztések mentése...",
-          "success": "Hozzászólás sikeresen szerkesztve"
-        },
-        "post": {
-          "error": "Hiba történt a hozzászólás posztolásakor",
-          "loading": "Hozzászólás posztolása...",
-          "success": "Hozzászólás sikeresen posztolva"
+          "success": "Hozzászólás sikeresen szerkesztve",
+          "error": "Hiba történt a hozzászólás törlése közben"
         }
       },
       "errors": {
@@ -119,9 +130,9 @@
     "unavailable": "Ez a blog elérhető lesz:",
     "report": {
       "toast": {
-        "error": "Hiba történt a jelentés küldése közben",
         "loading": "Jelentés küldése...",
-        "success": "Jelentés elküldve. Köszönjük a közreműködésed!"
+        "success": "Jelentés elküldve. Köszönjük a közreműködésed!",
+        "error": "Hiba történt a jelentés küldése közben"
       },
       "title": "Cikk jelentése",
       "emptyError": "Kérlek válassz egy okot",
@@ -137,100 +148,76 @@
       }
     }
   },
-  "notFound": {
-    "tabTile": "Nem található",
-    "title": "Talán el vagy veszlődve",
-    "desc": "Az oldal amit el akarsz érni nem létezik"
-  },
-  "user": {
-    "about": "Rólam",
-    "articles": "Cikkek",
-    "noArticles": "Nem található cikk",
-    "othersAlert": "Így látja a többi felhasználó az oldalad"
-  },
   "dashboard": {
+    "title": "Irányítópult",
+    "tabs": {
+      "preferences": "Preferenciák",
+      "account": "Fiók",
+      "posts": "Posztok",
+      "comments": "Hozzászólások",
+      "likes": "Likeok"
+    },
     "preferences": {
       "language": {
+        "title": "Nyelv",
         "desc": "Ez a beállítás csak az alkalmazás nyelvére vonatkozik, nem a blog nyelvére",
-        "select": "Válassz egy nyelvet",
-        "title": "Nyelv"
+        "select": "Válassz egy nyelvet"
       },
       "theme": {
+        "title": "Téma",
         "desc": "Válassz egy témát, amely neked megfelel",
         "select": "Válassz egy témát",
         "themes": {
-          "dark": "Sötét",
           "light": "Világos",
+          "dark": "Sötét",
           "system": "Rendszer"
-        },
-        "title": "Téma"
+        }
       },
       "notifications": {
-        "desc": "Kapj egy email-t mikor valaki bejelentkezik a fiokódba",
-        "title": "Emailes értesítések"
+        "title": "Emailes értesítések",
+        "desc": "Kapj egy email-t mikor valaki bejelentkezik a fiokódba"
       }
     },
-    "tabs": {
-      "account": "Fiók",
-      "comments": "Hozzászólások",
-      "likes": "Likeok",
-      "preferences": "Preferenciák",
-      "posts": "Posztok"
-    },
-    "title": "Irányítópult",
     "posts": {
-      "create": "Poszt írása",
-      "postCount": "Posztok száma"
+      "postCount": "Posztok száma",
+      "create": "Poszt írása"
     },
     "likes": {
-      "liked": {
-        "author": "Író",
-        "title": "Cím"
-      },
+      "received": "Kapott kedvelések",
       "given": "Kedvelt cikkek",
-      "received": "Kapott kedvelések"
+      "liked": {
+        "title": "Cím",
+        "author": "Író"
+      }
+    },
+    "comments": {
+      "comment": "Komment"
     },
     "account": {
-      "errors": {
-        "minPassword": "A jelszó legalább 8 karakterből kell álljon",
-        "noPassword": "A régi jelszó kötelező",
-        "confPassword": "A jelszavaknak egyezniük kell"
-      },
-      "fields": {
-        "email": "Email",
-        "name": "Név",
-        "password": "Jelszó változtatása",
-        "bio": "Rólam"
-      },
-      "password": {
-        "new": "Új jelszó",
-        "old": "Régi jelszó",
-        "confirm": "Írd be újra a jelszót"
-      },
       "toast": {
         "avatar": {
-          "error": "Hiba történt a kép feltöltése közbe",
-          "success": "A kép sikeresen fel lett töltve"
+          "success": "A kép sikeresen fel lett töltve",
+          "error": "Hiba történt a kép feltöltése közbe"
         },
         "email": {
-          "error": "Hiba történt az email megváltoztatása közben",
           "loading": "Emial változtatása...",
-          "success": "Email sikeresen kicserélve"
+          "success": "Email sikeresen kicserélve",
+          "error": "Hiba történt az email megváltoztatása közben"
         },
         "name": {
-          "error": "Hiba történt a név változtatása közben",
           "loading": "Név mentése...",
-          "success": "Név sikeresen lementve"
+          "success": "Név sikeresen lementve",
+          "error": "Hiba történt a név változtatása közben"
         },
         "password": {
-          "error": "Jelszó cseréje sikertelen",
           "loading": "Jelszó mentése...",
-          "success": "Jelszó sikeresen kicserélve"
+          "success": "Jelszó sikeresen kicserélve",
+          "error": "Jelszó cseréje sikertelen"
         },
         "socials": {
-          "error": "Nem sikerült menteni a felhasználóneved egyik közösségi oldalahoz",
           "loading": "Közösségi háló felhsználónév mentése...",
-          "success": "Közösségi háló felhasználónév lementve"
+          "success": "Közösségi háló felhasználónév lementve",
+          "error": "Nem sikerült menteni a felhasználóneved egyik közösségi oldalahoz"
         },
         "bio": {
           "loading": "Bio mentése...",
@@ -239,59 +226,41 @@
         }
       },
       "uploadButton": "Kép feltöltés",
+      "fields": {
+        "email": "Email",
+        "name": "Név",
+        "password": "Jelszó változtatása",
+        "bio": "Rólam"
+      },
+      "errors": {
+        "minPassword": "A jelszó legalább 8 karakterből kell álljon",
+        "noPassword": "A régi jelszó kötelező"
+      },
+      "password": {
+        "old": "Régi jelszó",
+        "new": "Új jelszó",
+        "confirm": "Írd be újra a jelszót"
+      },
       "username": "Felhasználónév",
       "socials": "Közösségi média"
-    },
-    "comments": {
-      "comment": "Komment"
     }
   },
   "newStory": {
-    "buttons": {
-      "next": "Következő",
-      "prev": "Elöző",
-      "post": "Posztolás"
-    },
-    "customize": {
-      "fields": {
-        "desc": "Leírás",
-        "picture": {
-          "name": "Kép",
-          "radio": {
-            "online": "Online Kép",
-            "upload": "Feltöltés"
-          },
-          "uploadButton": "Fájl feltöltése",
-          "urlHelper": "Győződj meg arról, hogy a kép szabadon használható és nem áll szerzői jogvédelem alatt"
-        },
-        "title": "Cím",
-        "date": {
-          "options": {
-            "now": "Most",
-            "schedule": "Időzített"
-          },
-          "title": "Posztolás dátuma"
-        }
-      },
-      "title": "Tegyük ezt még egyedibbé"
-    },
-    "posting": {
-      "loading": "Poszt feltöltése",
-      "success": "Poszt sikeresen feltöltve"
-    },
-    "preview": {
-      "title": "Lássuk, hogyan néz ki"
-    },
-    "tabs": {
-      "customize": "Testreszabás",
-      "preview": "Előnézet",
-      "write": "Írj"
-    },
     "title": "Új cikk",
+    "tabs": {
+      "write": "Írj",
+      "preview": "Előnézet",
+      "customize": "Testreszabás"
+    },
+    "buttons": {
+      "prev": "Elöző",
+      "post": "Posztolás",
+      "next": "Következő"
+    },
     "write": {
-      "placeholder": "Írd ide a cikked...",
       "title": "Oszd meg a történeted a világgal",
       "desc": "Nyugodtan használd a <1>Markdown</1> formázást, hogy a cikked fejleszd",
+      "placeholder": "Írd ide a cikked...",
       "markdown": {
         "heading": "Fejléc",
         "bold": "Félkövér",
@@ -315,37 +284,67 @@
         "info": "Támogatjuk a Markdown szintaxist a cikk formázásához. Kattints ide további információért."
       }
     },
+    "preview": {
+      "title": "Lássuk, hogyan néz ki"
+    },
+    "customize": {
+      "title": "Tegyük ezt még egyedibbé",
+      "fields": {
+        "title": "Cím",
+        "desc": "Leírás",
+        "picture": {
+          "name": "Kép",
+          "radio": {
+            "upload": "Feltöltés",
+            "online": "Online Kép"
+          },
+          "uploadButton": "Fájl feltöltése",
+          "urlHelper": "Győződj meg arról, hogy a kép szabadon használható és nem áll szerzői jogvédelem alatt"
+        },
+        "date": {
+          "title": "Posztolás dátuma",
+          "options": {
+            "now": "Most",
+            "schedule": "Időzített"
+          }
+        }
+      }
+    },
+    "posting": {
+      "success": "Poszt sikeresen feltöltve",
+      "loading": "Poszt feltöltése"
+    },
     "erros": {
-      "date": "Érvénytelen ISO dátumformátum",
-      "max": "A maximális karakterszám 255",
       "notEmpty": "Ez a mező kötelező",
+      "max": "A maximális karakterszám 255",
+      "date": "Érvénytelen ISO dátumformátum",
       "url": "Ennek érvényes URL-nek kell lennie"
     }
   },
   "forgotPassword": {
-    "confirm": "Írd be újra a jelszót",
+    "toast": {
+      "loading": "Jelszó kicserélése",
+      "success": "A jelszó sikeresen kicserélve",
+      "error": "A jelszó kicserélése sikertelen volt"
+    },
+    "title": "Elfelejtettem a jelszót",
     "invalid": "A link hibás vagy lejárt",
     "password": "Jelszó",
-    "title": "Elfelejtettem a jelszót",
-    "toast": {
-      "error": "A jelszó kicserélése sikertelen volt",
-      "loading": "Jelszó kicserélése",
-      "success": "A jelszó sikeresen kicserélve"
-    }
+    "confirm": "Írd be újra a jelszót"
   },
   "forgotPasswordDialog": {
-    "desc": "Ha találunk egy fiókot, amely az e-mail címedhez van kapcsolva, küldünk egy e-mailt a következő lépésekkel.",
-    "email": "Email cím",
     "error": {
       "email": {
         "incorrect": "Az e-mail címnek érvényesnek kell lennie.",
         "mandatory": "Ez kötelező"
       }
     },
+    "desc": "Ha találunk egy fiókot, amely az e-mail címedhez van kapcsolva, küldünk egy e-mailt a következő lépésekkel.",
+    "email": "Email cím",
     "toast": {
-      "error": "A kérés elküldése sikertelen volt",
       "loading": "Kérés küldése...",
-      "success": "A kérés sikeresen elküldve"
+      "success": "A kérés sikeresen elküldve",
+      "error": "A kérés elküldése sikertelen volt"
     }
   },
   "emailVerification": {
@@ -358,6 +357,7 @@
     "desc": "Ellenőrizd az email címed, mielőtt bejelentkezel. Nézz be a bejövő üzenetek közé a következő lépésekért. Ha nem látod, ne aggódj, ellenőrizd a spam mappát is!"
   },
   "admin": {
+    "title": "Admin konzol",
     "report": {
       "status": {
         "open": "Nyitott",
@@ -398,9 +398,18 @@
         "loading": "Strike visszavonása...",
         "success": "Strike visszavonva",
         "error": "Hiba történt a strike visszavonása közben"
+      },
+      "roleChange": {
+        "error": "A szerepkör módosítása sikertelen volt",
+        "loading": "Szerepkör módosítása...",
+        "success": "Szerepkör sikeresen módosítva"
+      },
+      "userDelete": {
+        "error": "A felhasználó törlése sikertelen volt",
+        "loading": "Felhasználó törlése...",
+        "success": "Felhasználó sikeresen törölve"
       }
     },
-    "title": "Admin konzol",
     "strikes": {
       "title": "Strike-ok"
     },
@@ -408,7 +417,16 @@
       "title": "Elutasítva"
     },
     "users": {
-      "title": "Felhasználók"
+      "title": "Felhasználók",
+      "table": {
+        "admin": "Admin",
+        "buttons": {
+          "delete": "Törlés",
+          "role": "Szerepkör modósítása"
+        },
+        "name": "Név",
+        "username": "Felhasználónév"
+      }
     }
   }
 }
